--- a/patcher/patches/manager-panel/manager-panel.css
+++ b/patcher/patches/manager-panel/manager-panel.css
@@ -59,5 +59,5 @@
 }
 
 #cascade-scroll-bottom-btn:active {
-  transform: scale(0.95);
+  transform: translateX(-50%) translateY(0) scale(0.95) !important;
 }
